# TestForge-CLI

./: .gitignore  CONTRIBUTING.md  EXECUTION_REPORT.md  LICENSE  README.md  README_en.md  README_ja.md  README_ko.md  README_zh-TW.md  install.sh  pyproject.toml  testforge.py
examples/: sample_module.py
src/: __init__.py  analyzer.py  generator.py  quality.py  tui.py
tests/: README.md  test_testforge.py
